--- a/src/App.scss
+++ b/src/App.scss
@@ -192,6 +192,140 @@ header {
         }
       }
     }
+  }
+}
 
+// Sidebar
+.sidebar {
+  @include no-select;
+  position: fixed;
+  overflow-x: hidden;
+  overflow-y: hidden;
+  width: 266px;
+  height: calc(100vh);
+  padding-top: 74px;
+  border-right: $generic-border;
+
+  @include mq('900px') {
+    display: none;
+  }
+
+  li {
+    padding-left: 10px;
+    padding-right: 15px;
+
+    &:hover .sidebar__project-delete {
+      display: block;
+    }
+  }
+
+  &__project {
+    padding: 5px 0;
+    cursor: pointer;
+
+    &-delete {
+      margin-left: auto;
+      display: none;
+
+      svg {
+        color: #cacaca;
+      }
+    }
+
+    &.active, &:hover {
+      font-weight: bold;
+      background-color: white;
+    }
+
+    &:nth-child(1) {
+      .sidebar__dot {
+        color: #6accbc;
+      }
+    }
+    &:nth-child(2) {
+      .sidebar__dot {
+        color: #fad003;
+      }
+    }
+    &:nth-child(3) {
+      .sidebar__dot {
+        color: #ff8d85;
+      }
+    }
+    &:nth-child(4) {
+      .sidebar__dot {
+        color: #ff9932;
+      }
+    }
+    &:nth-child(5) {
+      .sidebar__dot {
+        color: #af38eb;
+      }
+    }
+  }
+  
+  &__projects {
+    padding-left: 3px;
+  }
+
+  &__project {
+    @include va('left');
+  }
+
+  &__dot {
+    margin-right: 10px;
+    font-size: 30px;
+  }
+
+  &__middle {
+    display: flex;
+    margin: 20px 0;
+    border-bottom: $generic-border;
+    padding-left: 10px;
+    cursor: pointer;
+
+    span {
+      color: #0000008a;
+      margin-right: 10px;
+
+      svg.hidden-projects {
+        transform: rotate(-90deg);
+      }
+    }
+
+    h2 {
+      margin: 0;
+      color: #333;
+      font-size: 15px;
+      font-weight: bold;
+      padding-bottom: 20px;
+    }
+  }
+
+  &__generic {
+
+    li {
+      list-style-type: none;
+      color: #333;
+      display: flex;
+      cursor: pointer;
+      line-height: 1.50;
+      font-size: 15px;
+
+      span:first-of-type {
+        margin-right: 10px;
+
+        svg {
+          width: 18px;
+          height: 18px;
+          color: #555;
+        }
+      }
+
+      &.active, &:hover {
+        font-weight: bold;
+        background-color: white;
+      }
+    }
   }
 }
