--- a/src/App.scss
+++ b/src/App.scss
@@ -56,7 +56,7 @@ $generic-box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 0px 1px, rgba(0, 0, 0, 0.1) 8px 
   user-select: none;
 }
 
-@mixin btn {
+@mixin btn ($width) {
   width: $width;
   background-color: $generic-bg;
   color: #fff !important;
@@ -180,10 +180,12 @@ header {
               border-radius: 3px;
               background-color: rgba(255, 255, 255, 0.2);
             }
+
             &.settings__add {
               margin-right: 15px;
               font-size: 30px;
             }
+
             &.settings__dark-mode svg {
               width: 20px;
               height: 20px;
@@ -214,7 +216,7 @@ header {
     padding-left: 10px;
     padding-right: 15px;
 
-    &:hover .sidebar__project-delete {
+    .sidebar__project-delete { // removed &:hover
       display: block;
     }
   }
@@ -242,21 +244,25 @@ header {
         color: #6accbc;
       }
     }
+
     &:nth-child(2) {
       .sidebar__dot {
         color: #fad003;
       }
     }
+
     &:nth-child(3) {
       .sidebar__dot {
         color: #ff8d85;
       }
     }
+
     &:nth-child(4) {
       .sidebar__dot {
         color: #ff9932;
       }
     }
+
     &:nth-child(5) {
       .sidebar__dot {
         color: #af38eb;
@@ -326,6 +332,37 @@ header {
         font-weight: bold;
         background-color: white;
       }
+    }
+  }
+}
+
+// Show Confirm Delete
+.project-delete-modal {
+  position: relative;
+
+  &__inner {
+    @include box-overlay();
+    z-index: 99;
+    top: 10px;
+    right: 0;
+    width: 200px;
+    padding: 10px;
+    background-color: white;
+
+    p {
+      margin: 5px 0;
+      line-height: normal;
+      font-weight: normal;
+      font-size: 15px;
+    }
+
+    button {
+      @include btn('50px');
+    }
+
+    span {
+      @include cancel();
+      font-weight: normal;
     }
   }
 }
