--- a/src/App.scss
+++ b/src/App.scss
@@ -314,8 +314,7 @@ header {
       list-style-type: none;
       color: #333;
       display: flex;
-      padding-top: 5px;
-      padding-bottom: 5px;
+      padding: 10px 0 10px 10px;
       cursor: pointer;
       line-height: 1.50;
       font-size: 15px;
