--- a/src/App.scss
+++ b/src/App.scss
@@ -472,3 +472,131 @@ header {
     @include cancel();
   }
 }
+
+// Add Task
+.add-task {
+  &__overlay {
+    position: absolute;
+    z-index: 2000;
+    top: 0;
+    left: 0;
+    transition: opacity .2s ease-in;
+    margin: auto;
+    width: 100%;
+    height: calc(100vh);
+    background: rgba(102, 102, 102, 0.5);
+
+    .add-task__main {
+      position: absolute;
+      left: 50%;
+      top: 50%;
+      transform: translate(-50%, -50%);
+      overflow: visible;
+      margin-top: 55px;
+      margin-bottom: 20px;
+      border-radius: 5px;
+      padding: 20px 30px;
+      background-color: white;
+  
+      .header {
+        float: left;
+        margin-bottom: 20px;
+        font-size: 13px;
+      }
+    }
+
+    .add-task__cancel-x {
+      float: right;
+      margin-top: 10px;
+      cursor: pointer;
+      font-size: 12px;
+      font-weight: bold;
+      color: gray;
+    }
+  }
+
+  &__main {
+    position: relative;
+  }
+
+  &__project, &__date {
+    float: right;
+    margin: 20px 10px;
+    cursor: pointer;
+    color: gray;
+  }
+
+  &__project {
+    margin-right: 0;
+  }
+
+  &__content {
+    border: 1px solid #ddd;
+    border-radius: 3px;
+    width: 100%;
+    height: 35px;
+    padding-left: 10px;
+    padding-right: 10px;
+    background-color: white !important;
+  }
+
+  &__cancel, &__submit {
+    @include no-select();
+  }
+
+  &__cancel {
+    @include cancel();
+  }
+
+  &__submit {
+    @include btn(90px);
+  }
+
+  &__text {
+    display: inline-block;
+    margin-left: 15px;
+    font-size: 14px;
+    color: #545454;
+  }
+
+  &__plus {
+    color: #dd3b39;
+    font-size: 18px;
+  }  
+}
+
+.add-task__shallow, .add-project {
+  @include no-select();
+  margin-bottom: 20px;
+  cursor: pointer;
+}
+
+// Task Date
+.task-date {
+  @include box-overlay();
+  right: 0;
+  width: 200px;
+  background-color: #fff;
+
+  &__list li {
+    @include task-item();
+
+    span:first-of-type {
+      margin-right: 10px;
+
+      svg {
+        fill: grey;
+      }
+    }
+  }
+}
+
+// Project Overlay
+.project-overlay {
+  @include box-overlay();
+  background-color: white;
+
+  &__list li {
+    @include task-item();
+  }
+}
